--- a/plagiat_ed_index.html
+++ b/plagiat_ed_index.html
@@ -86,6 +86,19 @@
 			                <img src="https://drive.google.com/uc?id=1zchqrVcM-1DOWRa1GHEYeTQLVJa0Csfv" alt="molotov" width="100" height="auto" /></a>
 			            </td>
 	                    
+				    <tr>                <td width="425" id="titre">
+					    <br><br><span><p><br>Index des auteurs :<br><br>
+					    ANONYME, révolté de la colonne de fer, <i>Protestation devant les libertaires du présent et du futur sur les capitulations de 1937</i> (Socle théorique).<br><br>
+					    DEBORD, Guy, <i>Sur la Commune, Le Questionnairede l’I.S., Conditions du mouvement révolutionnaire congolais, La société du spectacle, La planète malade</i> et traducteur de <i>Protestation devant les libertaires du présent et du futur sur les capitulations de 1937</i> et de <i>Véridique Rapport sur les dernières chances de sauver le capitalisme en Italie</i> (socle théorique).<br><br>
+					    DIN, Mamoste, <i>Ne pas mourir comme des chiens</i> (bande dessinée), illustrations de <i>Protestation devant les libertaires du présent et du futur sur les capitulations de 1937</i> (Socle théorique), et graphisme du site.<br><br>
+					    KHAYATI, Mustapha,<i>  De la misère en milieu étudiant</i>(socle théorique).
+					    KOTANYI, Attila, <i>Sur la Commune</i> (socle théorique).<br><br>
+					    MARX, Karl, <i>Contribution à la critique de La philosophie du droit de Hegel</i> (socle théorique).<br><br>
+					    PANNEKOEK, Anton, <i>Lettre à Socialisme ou Barbarie</i> (socle théorique).<br><br>
+					    SANGUINETTI, Gianfranco (Censor), <i>Véridique Rapport sur les dernières chances de sauver le capitalisme en Italie</i> (socle théorique).<br><br>
+					    VANEGEIM, Raoul, <i>Sur la Commune</i> (socle théorique).<br><br>
+					    VELOCE, (présents sur Plagiat mais non publiés), <i>La civilisation du jeu, Ci-gît la critique, Réponse à Frédéric Lordon, Après l'orage</i> (socle théorique).<span></p>         </tr>
+				    
 		        </tr>
 			
 	        </table>
