--- a/plagiat_ed_articles.html
+++ b/plagiat_ed_articles.html
@@ -24,7 +24,7 @@
 					<a id="enteteaction-evenements" rel="debutaction">
 				<img src="image_site/orange_et_couteau.jpg" alt="Plagiat Editions entête" />
 			</a>
-			<figcaption><span><cite>Tout ce qui maintient quelque chose contribue au travail de la police. Car nous savons que toutes les idées ou les conduites qui existent déjà sont insuffisantes.</cite>Manifeste lettriste écrit le 19 février 1953.<span></figcaption>
+			<figcaption><span><cite>Tout ce qui maintient quelque chose contribue au travail de la police.<br> Car nous savons que toutes les idées ou les conduites qui existent déjà sont insuffisantes.</cite> <br>Manifeste lettriste écrit le 19 février 1953.<span></figcaption>
 			        </td>
 		    </tr>
 		</table >	
