--- a/plagiat_ed_boutique_Ne_pas_mourir_comme_des_chiens_Mamoste_dîn.html
+++ b/plagiat_ed_boutique_Ne_pas_mourir_comme_des_chiens_Mamoste_dîn.html
@@ -143,6 +143,10 @@ partageons un moment de la vie du camp et apprenons à
 				</tr>	
 			
 	        </table>
+						
+						<p><span> PS : Nous n'avons pour l'instant trouver de meilleurs propositions que paypal pour la vente en ligne.
+							Mais en passant par Paypal vous serez obligé d'y créer un compte, comme sur n'importe quelle boutique en ligne. 
+							(Fnac, rakuten, bd fugue, librairies, etc )</p><span>
   </div>
 
   <div class="col-3 col-s-12">
